// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RT-001: snapshot lock — generated code for all L3 fixtures > generate-object fixture snapshot locked 1`] = `
"import { generateText, Output } from 'ai';
import { z } from 'zod';
import { anthropic } from '@ai-sdk/anthropic';

export default async function run({ model: __model_provider, sink: __sink } = {}) {
  __sink?.('structured', (await generateText({ model: (__model_provider ?? anthropic('claude-haiku-4-5')), prompt: 'summarize X', output: Output.object({ schema: z.object({ title: z.string(), summary: z.string(), tags: z.array(z.string()) }) }) })).output);
}
"
`;

exports[`RT-001: snapshot lock — generated code for all L3 fixtures > generate-object-optional-field fixture snapshot locked 1`] = `
"import { generateText, Output } from 'ai';
import { z } from 'zod';
import { anthropic } from '@ai-sdk/anthropic';

export default async function run({ model: __model_provider, sink: __sink } = {}) {
  __sink?.('structured', (await generateText({ model: (__model_provider ?? anthropic('claude-haiku-4-5')), prompt: 'Generate a person', output: Output.object({ schema: z.object({ name: z.string(), middleName: z.string().nullable() }) }) })).output);
}
"
`;

exports[`RT-001: snapshot lock — generated code for all L3 fixtures > generate-text-with-tool fixture snapshot locked 1`] = `
"import { generateText, tool, stepCountIs } from 'ai';
import { z } from 'zod';
import { anthropic } from '@ai-sdk/anthropic';

export default async function run({ model: __model_provider, sink: __sink } = {}) {
  __sink?.('output', (await generateText({ model: (__model_provider ?? anthropic('claude-haiku-4-5')), prompt: 'What is the weather?', tools: { weather: tool({
    description: 'Get weather for a city',
    inputSchema: z.object({ city: z.string() }),
    execute: async (input) => {
        return '{ temp: 70, conditions: \\'sunny\\' }';
    }
  }) }, toolChoice: 'auto', stopWhen: stepCountIs(5) })).text);
}
"
`;

exports[`RT-001: snapshot lock — generated code for all L3 fixtures > tool-only fixture snapshot locked 1`] = `
"import { generateText, tool } from 'ai';
import { z } from 'zod';

export default async function run({ model: __model_provider, sink: __sink } = {}) {
  __sink?.('tool_def', tool({
    description: 'Get weather for a city',
    inputSchema: z.object({ city: z.string() }),
    execute: async (input) => {
        return '{ temp: 70, conditions: \\'sunny\\' }';
    }
  }));
}
"
`;
